--- a/Exercise_PythonNotebook/Primes_Profiling_Introduction.ipynb
+++ b/Exercise_PythonNotebook/Primes_Profiling_Introduction.ipynb
@@ -27,31 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4258b648",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: line_profiler in /Users/orl67423/anaconda3/lib/python3.7/site-packages (3.5.1)\n",
-      "Requirement already satisfied: numba in /Users/orl67423/anaconda3/lib/python3.7/site-packages (0.48.0)\n",
-      "Requirement already satisfied: memory_profiler in /Users/orl67423/anaconda3/lib/python3.7/site-packages (0.60.0)\n",
-      "Requirement already satisfied: llvmlite<0.32.0,>=0.31.0dev0 in /Users/orl67423/anaconda3/lib/python3.7/site-packages (from numba) (0.31.0)\n",
-      "Requirement already satisfied: numpy>=1.15 in /Users/orl67423/anaconda3/lib/python3.7/site-packages (from numba) (1.21.2)\n",
-      "Requirement already satisfied: setuptools in /Users/orl67423/anaconda3/lib/python3.7/site-packages (from numba) (58.0.4)\n",
-      "Requirement already satisfied: psutil in /Users/orl67423/anaconda3/lib/python3.7/site-packages (from memory_profiler) (5.8.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install line_profiler numba memory_profiler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "22143c64",
    "metadata": {},
    "outputs": [],
@@ -62,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c2347548",
    "metadata": {},
    "outputs": [],
@@ -82,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "2e0a981e",
    "metadata": {},
    "outputs": [],
@@ -97,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "7d030e63",
    "metadata": {},
    "outputs": [],
@@ -154,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "3cf8ac1b",
    "metadata": {},
    "outputs": [],
@@ -164,58 +150,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "8e98b9ec",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 55.6 ms, sys: 2.32 ms, total: 57.9 ms\n",
-      "Wall time: 57.2 ms\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "499999500000"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%time sum_of_numbers(MAX_VAL)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "18cf9795",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 18.8 ms, sys: 478 µs, total: 19.2 ms\n",
-      "Wall time: 19.3 ms\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "499999500000"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%time sum(range(MAX_VAL))"
    ]
@@ -243,18 +191,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "39cff5a3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "46.2 ms ± 907 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "sum_of_numbers(MAX_VAL)"
@@ -262,18 +202,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "c43606e2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16.7 ms ± 761 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "sum(range(MAX_VAL))"
@@ -320,27 +252,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "adb175be",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "n: 0 found primes: []\n",
-      "n: 1 found primes: []\n",
-      "n: 2 found primes: []\n",
-      "n: 3 found primes: [2]\n",
-      "n: 4 found primes: [2, 3]\n",
-      "n: 5 found primes: [2, 3]\n",
-      "n: 6 found primes: [2, 3, 5]\n",
-      "n: 7 found primes: [2, 3, 5]\n",
-      "n: 8 found primes: [2, 3, 5, 7]\n",
-      "n: 9 found primes: [2, 3, 5, 7]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(0,10):\n",
     "    print (f'n: {i} found primes: {count_primes(i)}')"
@@ -358,28 +273,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "7572a075",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "test_1 (__main__.TestPrimes) ... ok\n",
-      "test_3 (__main__.TestPrimes) ... ok\n",
-      "test_8 (__main__.TestPrimes) ... ok\n",
-      "test_9 (__main__.TestPrimes) ... ok\n",
-      "test_count_10k (__main__.TestPrimes) ... ok\n",
-      "test_float (__main__.TestPrimes) ... ok\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 6 tests in 0.315s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import unittest\n",
     "\n",
@@ -434,25 +331,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "bc352118",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 8 µs, sys: 1e+03 ns, total: 9 µs\n",
-      "Wall time: 10 µs\n",
-      "CPU times: user 75 µs, sys: 1 µs, total: 76 µs\n",
-      "Wall time: 77 µs\n",
-      "CPU times: user 3.59 ms, sys: 8 µs, total: 3.59 ms\n",
-      "Wall time: 3.6 ms\n",
-      "CPU times: user 297 ms, sys: 5.66 ms, total: 302 ms\n",
-      "Wall time: 303 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%time p = count_primes(10);\n",
     "%time p = count_primes(100);\n",
@@ -470,58 +352,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "0414cbe0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pp = %lprun -r  -f count_primes -f is_prime count_primes(10000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "5150964d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Timer unit: 1e-06 s\n",
-      "\n",
-      "Total time: 3.54705 s\n",
-      "File: /var/folders/89/b4_m2fbd1yz8x902y6x6c0jm0000gq/T/ipykernel_43528/3694220281.py\n",
-      "Function: is_prime at line 1\n",
-      "\n",
-      "Line #      Hits         Time  Per Hit   % Time  Line Contents\n",
-      "==============================================================\n",
-      "     1                                           def is_prime(n):\n",
-      "     2                                               \"\"\"Simplest method to determine if a number has any factors\"\"\"\n",
-      "     3   5776451    1636432.0      0.3     46.1      for i in range(2,n):\n",
-      "     4   5775222    1907751.0      0.3     53.8          if (n%i == 0):\n",
-      "     5      8769       2429.0      0.3      0.1              return False\n",
-      "     6                                           \n",
-      "     7      1229        443.0      0.4      0.0      return True\n",
-      "\n",
-      "Total time: 6.2198 s\n",
-      "File: /var/folders/89/b4_m2fbd1yz8x902y6x6c0jm0000gq/T/ipykernel_43528/3694220281.py\n",
-      "Function: count_primes at line 9\n",
-      "\n",
-      "Line #      Hits         Time  Per Hit   % Time  Line Contents\n",
-      "==============================================================\n",
-      "     9                                           def count_primes(n):\n",
-      "    10                                               \"\"\"Return a list of primes found for integer n\"\"\"\n",
-      "    11         1          3.0      3.0      0.0      primes = []\n",
-      "    12      9999       3168.0      0.3      0.1      for i in range(2,n):\n",
-      "    13      9998    6215369.0    621.7     99.9          if is_prime(i) :\n",
-      "    14      1229       1256.0      1.0      0.0              primes.append(i)\n",
-      "    15         1          1.0      1.0      0.0      return primes\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
+    "pp = %lprun -r  -f count_primes -f is_prime count_primes(10000)\n",
+    "# if you want to printo out the stats:\n",
     "pp.print_stats()"
    ]
   },
@@ -547,7 +384,9 @@
    "id": "bdb9deb3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Use these cells to try and make any changes to the code above and run any profiling."
+   ]
   },
   {
    "cell_type": "code",
@@ -568,20 +407,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "991b22c7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "peak memory: 58.23 MiB, increment: -0.10 MiB\n",
-      "peak memory: 58.23 MiB, increment: 0.00 MiB\n",
-      "peak memory: 58.38 MiB, increment: 0.14 MiB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%memit p = count_primes(10);\n",
     "%memit p = count_primes(10000);\n",
@@ -600,18 +429,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "81be60e7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting mprun_primes.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%file mprun_primes.py\n",
     "\n",
@@ -635,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "169ef8c1",
    "metadata": {},
    "outputs": [],
@@ -649,18 +470,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "4cb83e43",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%mprun -f count_primes -f is_prime count_primes(1000)"
    ]
@@ -689,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "c62218c2",
    "metadata": {},
    "outputs": [],
@@ -726,27 +539,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "8a61fb68",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 238 ms, sys: 52.8 ms, total: 291 ms\n",
-      "Wall time: 410 ms\n",
-      "CPU times: user 9 µs, sys: 0 ns, total: 9 µs\n",
-      "Wall time: 11 µs\n",
-      "CPU times: user 213 µs, sys: 12 µs, total: 225 µs\n",
-      "Wall time: 227 µs\n",
-      "CPU times: user 14.7 ms, sys: 220 µs, total: 14.9 ms\n",
-      "Wall time: 14.9 ms\n",
-      "CPU times: user 1.17 s, sys: 11.3 ms, total: 1.18 s\n",
-      "Wall time: 1.18 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%time p = count_primes_jit(10);\n",
     "%time p = count_primes_jit(100);\n",
@@ -789,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "2f4d0fe9",
    "metadata": {},
    "outputs": [],
@@ -816,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "3e4e91c1",
    "metadata": {},
    "outputs": [],
@@ -826,76 +622,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "b2816c5c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 24 s, sys: 209 ms, total: 24.2 s\n",
-      "Wall time: 24.4 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%time primes_basic = count_primes(MAX_PRIMES)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "6d7ac766",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1.31 ms, sys: 104 µs, total: 1.42 ms\n",
-      "Wall time: 1.44 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%time primes_1v1 = rwh_primes1v1(MAX_PRIMES)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "2b5a5e40",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1.22 ms, sys: 71 µs, total: 1.29 ms\n",
-      "Wall time: 1.3 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%time primes_1v2 = rwh_primes1v2(MAX_PRIMES)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "bbdabe3a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1.17 s, sys: 12.4 ms, total: 1.18 s\n",
-      "Wall time: 1.18 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%time primes_jit = count_primes_jit(MAX_PRIMES)"
    ]
@@ -915,20 +675,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "8f5b1a95",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n",
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(set(primes_1v1) == set(primes_1v2))\n",
     "print(set(primes_basic) == set(primes_jit))\n",
