Updates for Exercises including new notebook

--- a/Exercise_PythonNotebook/Primes_Profiling_Introduction.ipynb
+++ b/Exercise_PythonNotebook/Primes_Profiling_Introduction.ipynb
@@ -358,8 +358,8 @@
    "outputs": [],
    "source": [
     "pp = %lprun -r  -f count_primes -f is_prime count_primes(10000)\n",
-    "# if you want to printo out the stats:\n",
-    "pp.print_stats()"
+    "# if you want to print out the stats:\n",
+    "# pp.print_stats()"
    ]
   },
   {
